# C_Learning

./: .gitignore  CMakeLists.txt  READE.md  README.md  goodbye.c  hello.c  practice.c
lesson10/: CMakeLists.txt  calc_input.c  person_input.c  print_demo.c  safe_input.c  table_print.c
lesson11/: CMakeLists.txt  battle.c  grade.c  led_state_machine.c  menu_system.c
lesson12/: CMakeLists.txt  do_while_menu.c  draw_triangle.c  factorial.c  for_demo.c  goto_error.c  guess_number.c  while_demo.c
lesson13/: CMakeLists.txt  data_clean.c  find_negative.c  goto_matrix.c  prime_finder.c  safe_open.c  skip_weekends.c
lesson14/: CMakeLists.txt  bound_check.c  leaderboard.c  reverse.c  scores.c  unique.c
lesson15/: analysis.txt
lesson15/cmake_practice/: CMakeLists.txt  main.c
lesson16/: CMakeLists.txt  array_stats.c  calculator.c  factorial_func.c  is_prime_func.c  max_demo.c  password_check.c
lesson17/: CMakeLists.txt  call_counter.c  id_gen.c
lesson17/global_share/: CMakeLists.txt  config.c  config.h  main.c
lesson17/player_data/: CMakeLists.txt  main.c  player.c  player.h
lesson17/temp_manager/: CMakeLists.txt  main.c  temp_manager.c  temp_manager.h
lesson17/version_demo/: CMakeLists.txt  main.c  version.c
lesson18/: CMakeLists.txt  array_stats_ptr.c  minmax.c  pointer_basic.c  string_ptr.c  swap_double.c
lesson19/: CMakeLists.txt  array_copy.c  decay_trap.c  equivalence.c  my_strlen.c  pointer_traverse.c  traverse_reverse.c
lesson20/: CMakeLists.txt  my_string.c  my_string.h  my_strstr.c  safe_strcat.c  test_my_string.c
lesson21/: CMakeLists.txt  debug_macro.c  my_string.c  platform_demo.c  srencpy_trap.c  trig_macro.c  version.c
lesson21/logger_demo/: CMakeLists.txt  logger.c  logger.h  test_logger.c
lesson21/my_math_demo/: CMakeLists.txt  my_math.c  my_math.h  test_math.c
lesson6/: CMakeLists.txt  analysis.md  ascii_table.c  datatype_demo.c  float_prec.c  overflow_demo.c  wrap.c
lesson7/: CMakeLists.txt  compare.c  const_demo.c  define_demo.c  enum_demo.c  magic_numbers.c  state_machine.c
lesson8/: CMakeLists.txt  bit_calc.c  bit_op.c  bitwise_demo.c  game_flags.c  led_sim.c
lesson9/: CMakeLists.txt  analyze_conversion.c  cast_pointer.c  health_percent.c  implicit_cast.c  safe_int_from_float.c  truncation.c
