cmake_minimum_required(VERSION 3.10)
project(multi_apps C)
set(CMAKE_C_STANDARD 11)

add_executable(my_greeting hello.c)
add_executable(practice practice.c)
add_executable(goodbye goodbye.c)


add_subdirectory(lesson6)
add_subdirectory(lesson7)
add_subdirectory(lesson8)
add_subdirectory(lesson9)
add_subdirectory(lesson10)
add_subdirectory(lesson11)
add_subdirectory(lesson12)
add_subdirectory(lesson13)
add_subdirectory(lesson14)
add_subdirectory(lesson16)
add_subdirectory(lesson17)
add_subdirectory(lesson18)
add_subdirectory(lesson19)
add_subdirectory(lesson20)
add_subdirectory(lesson21)